...
    relay: string;
  };
  Redeem: {relay: string; token: string};
  CalendarEvent: { relay: string; address: string };
  Award: { relay: string; award: string };
  Passes: undefined;
  Store: {relay: string; name?: string};
  PublicProfile: { pubkey: string };
  Kind1Thread: { nevent: string };
  Kind30023Thread: { naddr: string };
  LiveStream: { nevent: string };
  Kind1111Comments: { nevent: string };
  Tags: { tags: string[] };
...
